--- a/MobileApp/android/app/src/main/res/xml/appwidget_info.xml
+++ b/MobileApp/android/app/src/main/res/xml/appwidget_info.xml
@@ -1,7 +1,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:minWidth="40dp"
+    android:minWidth="100dp"
     android:minHeight="40dp"
-    android:resizeMode="horizontal|vertical"
+    android:maxWidth="320dp"
+    android:resizeMode="horizontal"
+    android:previewImage="@drawable/widget_preview_image"
     android:updatePeriodMillis="10000">
 </appwidget-provider>
